# server

./: .cproject  .gitignore  .gitmodules  .project  .travis.yml  Makefile  Makefile.am  README  README.md  autogen.sh  build.sh  camera.cpp  camera.hpp  checksum  checksum.cpp  config.h  config.hpp  configure.ac  constants.h  constants.hpp  contributing.md  install-wiringpi.sh  openstratos-root.cc  openstratos-root.cpp  openstratos.cc  openstratos.cpp  openstratos.h  openstratos.hpp  prepare.sh  serialTest.cpp  serialTest.hpp  startup.sh  threads.cc  threads.h  utils.cc  utils.h
adc/: ADC.cc  ADC.h  MCP3424.cc  MCP3424.h
battery/: Battery.cc  Battery.cpp  Battery.h  Battery.hpp
bme280/: BME280.cc  BME280.h
camera/: Camera.cc  Camera.cpp  Camera.h  Camera.hpp  camera.cpp
gps/: GPS.cc  GPS.cpp  GPS.h  GPS.hpp  GPSFrame.cpp  GPSFrame.hpp  IGPS.hpp
gsm/: GSM.cc  GSM.h  GSMDevice.cpp  GSMDevice.hpp
logger/: Logger.cc  Logger.h
logic/: acquire_fix.cc  go_down.cc  go_up.cc  initialize.cc  land.cc  logic.h  main_logic.cc  main_while.cc  safe_mode.cc  send_init_sms.cc  shut_down.cc  start_recording.cc  wait_launch.cc
mcp3424/: MCP3424.cc  MCP3424.cpp  MCP3424.h  MCP3424.hpp
pcb_design/: OpenStratos.sch
serial/: Serial.cc  Serial.cpp  Serial.h  Serial.hpp  serialTest.cpp
temperature/: Temperature.cc  Temperature.cpp  Temperature.h  Temperature.hpp
testing/: .travis-ci.sh  battery_test.cc  battery_test.cpp  camera_test.cc  camera_test.cpp  core_test.cpp  gps_test.cc  gps_test.cpp  install.sh  serial_test.cc  serial_test.cpp  temperature_test.cc  temperature_test.cpp  test.sh  testing.cc  testing.cpp  travis-install.sh  travis-test.sh
xbee/: XBee.cc  XBee.h
